# Machine-Learning-Analysis

./: .gitignore  README.md  pyproject.toml
classification/: solution.ipynb
regression/: solution.ipynb
